Fix inline code overflow

--- a/resources/css/_code.css
+++ b/resources/css/_code.css
@@ -15,8 +15,8 @@ pre code.torchlight .summary-caret {
     @apply mr-1;
 }
 
-code {
-    @apply break-words;
+p code {
+    @apply inline-flex max-w-full overflow-scroll;
 }
 
 .tabbed-code {
